--- a/.vscodeignore
+++ b/.vscodeignore
@@ -4,7 +4,7 @@ out/test/**
 src/**
 .gitignore
 .yarnrc
-vsc-extension-quickstart.md
+azure-pipelines.yml
 **/tsconfig.json
 **/.eslintrc.json
 **/*.map
