Fixed extension name

--- a/package.json
+++ b/package.json
@@ -112,7 +112,7 @@
 		"pretest": "npm run compile && npm run lint",
 		"lint": "eslint src --ext ts",
 		"test": "node ./out/test/runTest.js",
-		"package": "vsce package -o minecraft-debugger-js.vcix"
+		"package": "vsce package -o minecraft-debugger-js.vsix"
 	},
 	"dependencies": {
 		"stream-parser": "^0.3.1",
