Allows debugger to function when some modules can't be mapped

--- a/package.json
+++ b/package.json
@@ -84,6 +84,10 @@
 							"inputPort": {
 								"type": "string",
 								"description": "Prompts for a port at launch."
+							},
+							"moduleMapping": {
+								"type": "object",
+								"description": "Module mapping for imports. Used if modules are external (i.e. included as part of minecraft). Defaults to an empty object."
 							}
 						}
 					}
