--- a/package.json
+++ b/package.json
@@ -156,7 +156,6 @@
 		"glob": "^7.1.6",
 		"mocha": "^10.2.0",
 		"typescript": "^4.1.3",
-		"vsce": "^2.15.0",
-		"vscode-test": "^1.5.0"
+		"vsce": "^2.15.0"
 	}
 }
