--- a/.ado/templates/package_extension.yml
+++ b/.ado/templates/package_extension.yml
@@ -22,7 +22,7 @@ steps:
     echo ">>> Compiled vscode-test"
     cd sample
     echo ">>> Run sample integration test"
-    yarn && yarn compile && yarn test
+    yarn && yarn compile
   displayName: Run Tests
   env:
     DISPLAY: ':99.0'
