--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "minecraft-debugger",
 	"displayName": "Minecraft Bedrock Edition Debugger",
 	"description": "Debug your JavaScript code running as part of the GameTest Framework experimental feature in Minecraft Bedrock Edition.",
-	"version": "1.0.0",
+	"version": "1.1.0",
 	"publisher": "mojang-studios",
 	"author": {
 		"name": "Mojang Studios"
@@ -136,7 +136,6 @@
 		"watch": "tsc -watch -p ./",
 		"pretest": "npm run compile && npm run lint",
 		"lint": "eslint src --ext ts",
-		"test": "node ./out/test/runTest.js",
 		"package": "vsce package -o minecraft-debugger-js.vsix"
 	},
 	"dependencies": {
@@ -156,7 +155,6 @@
 		"glob": "^7.1.6",
 		"mocha": "^10.2.0",
 		"typescript": "^4.1.3",
-		"vsce": "^2.15.0",
-		"vscode-test": "^1.5.0"
+		"vsce": "^2.15.0"
 	}
 }
