--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "minecraft-debugger",
 	"displayName": "Minecraft Bedrock Edition Debugger",
 	"description": "Debug your JavaScript code running in Minecraft Bedrock Edition.",
-	"version": "1.2.1",
+	"version": "1.3.0",
 	"publisher": "mojang-studios",
 	"author": {
 		"name": "Mojang Studios"
@@ -103,6 +103,10 @@
 							"moduleMapping": {
 								"type": "object",
 								"description": "Module mapping for imports. Each key is an import name that will be mapped to the provided value. Used if modules are external (i.e. included as part of minecraft). Defaults to an empty object."
+							},
+							"sourceMapBias": {
+								"type": "string",
+								"description": "The bias to use when mapping from generated code to source code. Can be either 'leastUpperBound' or 'greatestLowerBound'. Defaults to 'leastUpperBound'."
 							}
 						}
 					}
@@ -148,7 +152,7 @@
 		"package": "vsce package -o minecraft-debugger-js.vsix"
 	},
 	"dependencies": {
-		"source-map": "^0.7.3",
+		"source-map": "^0.7.4",
 		"stream-parser": "^0.3.1",
 		"vscode-debugadapter": "1.47.0"
 	},
