--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "minecraft-debugger",
 	"displayName": "Minecraft Bedrock Edition Debugger",
 	"description": "Debug your JavaScript code running in Minecraft Bedrock Edition.",
-	"version": "1.3.1",
+	"version": "1.4.0",
 	"publisher": "mojang-studios",
 	"author": {
 		"name": "Mojang Studios"
@@ -107,6 +107,10 @@
 							"sourceMapBias": {
 								"type": "string",
 								"description": "The bias to use when mapping from generated code to source code. Can be either 'leastUpperBound' or 'greatestLowerBound'. Defaults to 'leastUpperBound'."
+							},
+							"targetModuleUuid": {
+								"type": "string",
+								"description": "The script module uuid from the manifest.json of the Minecraft Add-On being debugged. Necessary if there are multiple Add-Ons active."
 							}
 						}
 					}
