--- a/.ado/templates/package_extension.yml
+++ b/.ado/templates/package_extension.yml
@@ -2,7 +2,7 @@
 parameters:
 - name: nodeVersion
   type: string
-  default: '18.x'
+  default: '20.x'
 
 steps:
 - task: NodeTool@0
@@ -10,26 +10,14 @@ steps:
     versionSpec: '${{ parameters.nodeVersion }}'
   displayName: 'Install Node.js'
 
-- bash: |
-    /usr/bin/Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
-    echo ">>> Started xvfb"
-  displayName: Start xvfb
-  condition: and(succeeded(), eq(variables['Agent.OS'], 'Linux'))
+- script: |
+    npm run install:all
+  displayName: 'NPM - Install'
 
-- bash: |
-    echo ">>> Compile vscode-test"
-    yarn && yarn compile
-    echo ">>> Compiled vscode-test"
-    cd sample
-    echo ">>> Run sample integration test"
-    yarn && yarn compile
-  displayName: Run Tests
-  env:
-    DISPLAY: ':99.0'
+- script: |
+    npm run build:all
+  displayName: 'NPM - Compile'
 
-- bash: |
-    echo ">>> Package Extension"
-    yarn package
-  displayName: Package Extension
-  env:
-    DISPLAY: ':99.0'
+- script: |
+    npm run package
+  displayName: 'NPM - Package'
