--- a/package.json
+++ b/package.json
@@ -148,6 +148,7 @@
         "install:all": "npm install && cd webview-ui && npm install",
         "start:webview": "cd webview-ui && npm run start",
         "build:webview": "cd webview-ui && npm run build",
+        "build:all": "npm run build:webview && npm run compile",
         "vscode:prepublish": "npm run compile",
         "compile": "tsc -p ./",
         "watch": "tsc -watch -p ./",
