--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "hello-world",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "start": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@observablehq/plot": "^0.6.14",
-    "@types/d3": "^7.4.3",
-    "@types/node": "^20.12.11",
-    "@vscode/webview-ui-toolkit": "^1.2.2",
-    "d3": "^7.9.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  },
-  "devDependencies": {
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.0",
-    "@types/vscode-webview": "^1.57.0",
-    "@vitejs/plugin-react": "^1.0.7",
-    "typescript": "^4.4.4",
-    "vite": "^2.9.13"
-  }
+    "name": "minecraft-diagnostics-webview",
+    "version": "1.0.0",
+    "private": true,
+    "scripts": {
+        "start": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@observablehq/plot": "^0.6.14",
+        "@types/d3": "^7.4.3",
+        "@types/node": "^20.12.11",
+        "@vscode/webview-ui-toolkit": "^1.2.2",
+        "d3": "^7.9.0",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
+    },
+    "devDependencies": {
+        "@types/react": "^18.3.1",
+        "@types/react-dom": "^18.3.0",
+        "@types/vscode-webview": "^1.57.0",
+        "@vitejs/plugin-react": "^1.0.7",
+        "typescript": "^4.4.4",
+        "vite": "^2.9.13"
+    }
 }
