--- a/.github/workflows/IssueOpenedNotification.yml
+++ b/.github/workflows/IssueOpenedNotification.yml
@@ -14,12 +14,15 @@ jobs:
     - name: Send issue to Slack
       shell: pwsh
       run: |
-        $messageBody = @'
+        # Format issue as a quote
+        $issueBody = "${{ github.event.issue.body }}" -replace "`n" "`n>"
+
+        $messageBody = @"
         A <${{ github.event.issue.html_url }}|new issue> has been opened by _${{ github.event.issue.user.login }}_ in *${{ github.repository }}*
         > *#${{ github.event.issue.number }} ${{ github.event.issue.title }}*
         >
-        > ${{ github.event.issue.body }}
-        '@
+        > $($issueBody)
+        "@
 
         $headers = @{
             "Authorization" = "Bearer  ${{ secrets.SLACK_APP_TOKEN }}"
