--- a/.github/workflows/IssueOpenedNotification.yml
+++ b/.github/workflows/IssueOpenedNotification.yml
@@ -14,16 +14,9 @@ jobs:
     - name: Send issue to Slack
       shell: pwsh
       run: |
-        # Format issue as a quote
-        $issueBody = @"
-        ${{ github.event.issue.body }}
-        "@ -replace "`n" "`n>"
-
         $messageBody = @"
-        A <${{ github.event.issue.html_url }}|new issue> has been opened by _${{ github.event.issue.user.login }}_ in *${{ github.repository }}*
-        > *#${{ github.event.issue.number }} ${{ github.event.issue.title }}*
-        >
-        > $($issueBody)
+        A new issue has been opened by _${{ github.event.issue.user.login }}_ in *${{ github.repository }}*
+        > <${{ github.event.issue.html_url }}|*#${{ github.event.issue.number }} ${{ github.event.issue.title }}*>
         "@
 
         $headers = @{
