--- a/package.json
+++ b/package.json
@@ -12,6 +12,31 @@
         "type": "git",
         "url": "https://github.com/Mojang/minecraft-debugger.git"
     },
+    "release": {
+        "branches": [
+            "main"
+        ],
+        "plugins": [
+            "@semantic-release/commit-analyzer",
+            "@semantic-release/release-notes-generator",
+            [
+                "semantic-release-vsce",
+                {
+                    "packageVsix": true
+                }
+            ],
+            [
+                "@semantic-release/github",
+                {
+                    "assets": [
+                        {
+                            "path": "*.vsix"
+                        }
+                    ]
+                }
+            ]
+        ]
+    },
     "icon": "bedrock-icon.png",
     "engines": {
         "node": "^20.0.0",
@@ -172,13 +197,14 @@
         "watch": "tsc -watch",
         "pretest": "npm run compile && npm run lint",
         "lint": "eslint src --ext ts",
-        "package": "vsce package -o minecraft-debugger-js.vsix"
+        "package": "vsce package -o minecraft-debugger-js.vsix",
+        "release": "npx semantic-release"
     },
     "dependencies": {
+        "@vscode/webview-ui-toolkit": "^1.4.0",
         "source-map": "^0.7.4",
         "stream-parser": "^0.3.1",
-        "vscode-debugadapter": "1.47.0",
-        "@vscode/webview-ui-toolkit": "^1.4.0"
+        "vscode-debugadapter": "1.47.0"
     },
     "devDependencies": {
         "@types/glob": "^7.1.3",
@@ -191,6 +217,8 @@
         "eslint": "^7.19.0",
         "glob": "^7.1.6",
         "mocha": "^10.2.0",
+        "semantic-release": "^24.0.0",
+        "semantic-release-vsce": "^5.7.2",
         "typescript": "^4.1.3",
         "vsce": "^2.15.0"
     }
