--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,8 @@
 name: release
 
 on:
-  pull_request: # REMOVE!!
-    branches: [main] # REMOVE!!
   push:
-    branches: [main]
+    branches: [main, test]
 
 jobs:
   release:
