--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,3 +8,6 @@ jobs:
     steps:
     - name: Conventional Commit In Pull Requests
       uses: ytanikin/PRConventionalCommits@1.2.0
+      with:
+        task_types: '["feat","fix","docs","test","ci","refactor","perf","chore","revert"]'
+        add_label: 'true'
