--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -2,6 +2,10 @@
     "name": "minecraft-diagnostics-webview",
     "version": "1.0.0",
     "private": true,
+    "engines": {
+        "node": "^20.0.0",
+        "vscode": "^1.55.0"
+    },
     "scripts": {
         "start": "vite",
         "build": "tsc && vite build",
@@ -17,7 +21,7 @@
         "react-dom": "^18.3.1"
     },
     "devDependencies": {
-        "@types/react": "^18.3.1",
+        "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@types/vscode-webview": "^1.57.0",
         "@vitejs/plugin-react": "^1.0.7",
