--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
             "@semantic-release/commit-analyzer",
             "@semantic-release/release-notes-generator",
             [
+                "@semantic-release/changelog",
+                {
+                    "changelogFile": "CHANGELOG.md"
+                }
+            ],
+            [
                 "semantic-release-vsce",
                 {
                     "packageVsix": true
@@ -209,6 +215,7 @@
         "vscode-debugadapter": "1.47.0"
     },
     "devDependencies": {
+        "@semantic-release/changelog": "^6.0.3",
         "@types/glob": "^7.1.3",
         "@types/mocha": "^8.0.4",
         "@types/node": "^12.11.7",
