--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -2,6 +2,10 @@
     "name": "minecraft-diagnostics-webview",
     "version": "1.0.0",
     "private": true,
+    "engines": {
+        "node": "^20.0.0",
+        "vscode": "^1.55.0"
+    },
     "scripts": {
         "start": "vite",
         "build": "tsc && vite build",
@@ -9,7 +13,6 @@
     },
     "dependencies": {
         "@observablehq/plot": "^0.6.14",
-        "@types/d3": "^7.4.3",
         "@types/node": "^20.12.11",
         "@vscode/webview-ui-toolkit": "^1.2.2",
         "d3": "^7.9.0",
@@ -17,7 +20,8 @@
         "react-dom": "^18.3.1"
     },
     "devDependencies": {
-        "@types/react": "^18.3.1",
+        "@types/d3": "^7.4.3",
+        "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@types/vscode-webview": "^1.57.0",
         "@vitejs/plugin-react": "^1.0.7",
