--- a/package.json
+++ b/package.json
@@ -184,6 +184,7 @@
     },
     "devDependencies": {
         "@semantic-release/changelog": "^6.0.3",
+        "@semantic-release/git": "^10.0.1",
         "@types/glob": "^7.1.3",
         "@types/mocha": "^8.0.4",
         "@types/node": "^12.11.7",
