--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,10 @@ name: CI
 
 on: [pull_request]
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   lint_pr_title:
     name: Lint PR Title
