--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,12 +21,12 @@ jobs:
     name: Build and Test
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 20
-      - run: npm run ci:all
-      - run: npm run build:all
+      #- uses: actions/checkout@v3
+      #- uses: actions/setup-node@v3
+      #  with:
+      #    node-version: 20
+      #- run: npm run ci:all
+      #- run: npm run build:all
       - name: Azure login
         uses: azure/login@v2
         with:
@@ -40,4 +40,4 @@ jobs:
         with:
           azcliversion: latest
           inlineScript: |
-            az account show
+            az rest -u https://app.vssps.visualstudio.com/_apis/profile/profiles/me --resource 499b84ac-1321-427f-aa17-267ca6975798
