--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,3 +41,11 @@ jobs:
           azcliversion: latest
           inlineScript: |
             az rest -u https://app.vssps.visualstudio.com/_apis/profile/profiles/me --resource 499b84ac-1321-427f-aa17-267ca6975798
+
+      - name: Install vsce and dependencies
+        shell: pwsh
+        run: |
+          cd SecurePublishSample
+          npm install -g @vscode/vsce
+          npm install
+          vsce --azure-credential --verify-pat
