--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,11 @@ jobs:
       #    node-version: 20
       #- run: npm run ci:all
       #- run: npm run build:all
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 20
+      - run: npm run ci:all
       - name: Azure login
         uses: azure/login@v2
         with:
@@ -45,7 +50,6 @@ jobs:
       - name: Install vsce and dependencies
         shell: pwsh
         run: |
-          cd SecurePublishSample
           npm install -g @vscode/vsce
           npm install
           vsce --azure-credential --verify-pat
