--- a/package.json
+++ b/package.json
@@ -199,6 +199,6 @@
         "semantic-release": "^24.0.0",
         "semantic-release-vsce": "github:JakeShirley/semantic-release-vsce",
         "typescript": "^4.1.3",
-        "vsce": "^2.15.0"
+        "@vscode/vsce": "^2.31.1"
     }
 }
