--- a/package.json
+++ b/package.json
@@ -197,8 +197,8 @@
         "glob": "^7.1.6",
         "mocha": "^10.2.0",
         "semantic-release": "^24.0.0",
-        "semantic-release-vsce": "^5.7.2",
+        "semantic-release-vsce": "github:JakeShirley/semantic-release-vsce",
         "typescript": "^4.1.3",
-        "vsce": "^2.15.0"
+        "@vscode/vsce": "^2.31.1"
     }
 }
