--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,7 @@
 	"tasks": [
 		{
 			"type": "npm",
-			"script": "watch",
+			"script": "build:all",
 			"problemMatcher": "$tsc-watch",
 			"isBackground": true,
 			"presentation": {
