--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,7 +9,11 @@ updates:
     directory: "/" # Location of package manifests
     schedule:
       interval: "daily"
+    commit-message:
+      prefix: "chore(dependabot): "
   - package-ecosystem: "npm" # See documentation for possible values
     directory: "/webview-ui/" # Location of package manifests
     schedule:
       interval: "daily"
+    commit-message:
+      prefix: "chore(dependabot): "
