--- a/package.json
+++ b/package.json
@@ -171,12 +171,12 @@
         "pretest": "npm run compile && npm run lint",
         "lint": "eslint src --ext ts",
         "release": "npx semantic-release",
-        "compile": "npm run check-types && node esbuild.js",
+        "compile": "npm run check-types && node esbuild.mjs",
         "check-types": "tsc --noEmit",
         "watch": "npm-run-all -p watch:*",
-        "watch:esbuild": "node esbuild.js --watch",
+        "watch:esbuild": "node esbuild.mjs --watch",
         "watch:tsc": "tsc --noEmit --watch --project tsconfig.json",
-        "package:all": "npm run build:webview && npm run check-types && node esbuild.js --production"
+        "package:all": "npm run build:webview && npm run check-types && node esbuild.mjs --production"
     },
     "dependencies": {
         "@vscode/webview-ui-toolkit": "^1.4.0",
@@ -195,7 +195,8 @@
         "@typescript-eslint/eslint-plugin": "^4.14.1",
         "@typescript-eslint/parser": "^4.14.1",
         "@vscode/vsce": "^2.31.1",
-        "esbuild": "^0.12.29",
+        "esbuild": "^0.14.0",
+        "esbuild-plugin-copy": "^2.1.1",
         "eslint": "^7.19.0",
         "glob": "^7.1.6",
         "mocha": "^10.7.0",
