chore(dev): Updated VS Code launch config to work more reliably

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,8 +6,7 @@
 		{
 			"type": "npm",
 			"script": "build:all",
-			"problemMatcher": "$tsc-watch",
-			"isBackground": true,
+			"problemMatcher": "$tsc",
 			"presentation": {
 				"reveal": "never"
 			},
