--- a/package.json
+++ b/package.json
@@ -179,10 +179,10 @@
         "package:all": "npm run build:webview && npm run check-types && node esbuild.mjs --production"
     },
     "dependencies": {
+        "@vscode/debugadapter": "^1.66.0",
         "@vscode/webview-ui-toolkit": "^1.4.0",
         "source-map": "^0.7.4",
-        "stream-parser": "^0.3.1",
-        "vscode-debugadapter": "1.47.0"
+        "stream-parser": "^0.3.1"
     },
     "devDependencies": {
         "@semantic-release/changelog": "^6.0.3",
