feat(diagnostics) Add a extension setting to open the diag view on conn
- Add a vscode extension setting, when true on a debugger connection with MC the diagnostics view is opened

--- a/package.json
+++ b/package.json
@@ -159,7 +159,16 @@
                     "PromptForPort": "extension.minecraft-js.getPort"
                 }
             }
-        ]
+        ],
+        "configuration": {
+            "properties": {
+                "minecraft-debugger.showDiagnosticViewOnConnect": {
+                    "type": "boolean",
+                    "default": false,
+                    "description": "Open the diagnostics view on connection to Minecraft."
+                }
+            }
+        }
     },
     "scripts": {
         "install:all": "npm install && cd webview-ui && npm install",
